--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 title: Feedback Form
+script: FeedbackToolScript.js
 ---
 <!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
@@ -94,5 +95,3 @@ title: Feedback Form
     </div>
 </div>
 <!-- END PAGE FEEDBACK WIDGET -->
-
-<script type="text/javascript" src="FeedbackToolScript.js"></script>
