--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
---- title: Feedback Form script: FeedbackToolScript.js ---
+---
+title: Feedback Form 
+script: FeedbackToolScript.js
+---
 <!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
     <div class="col-sm-7 col-lg-6">
