--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 title: Feedback Form 
 script: FeedbackToolScript.js
 ---
+<script src="jquery.js"></script>
+<script src="jquery.validate.js"></script>
 <!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
     <div class="col-sm-7 col-lg-6">
