--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ script: FeedbackToolScript.js
 ---
 <script src="jquery.js"></script>
 <script src="jquery.validate.js"></script>
+<script>
+    $("details").validate();
+</script>
 <!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
     <div class="col-sm-7 col-lg-6">
