--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ script: FeedbackToolScript.js
                 </div>
             </div>
         </div>
-        <p class="h3 hidden nojs-show">If not, tell us why:</p>
-        <div class="gc-pg-hlpfl-no nojs-show">
+        <p class="h3 hidden">If not, tell us why:</p>
+        <div class="gc-pg-hlpfl-deactivated">
             <fieldset>
                 <legend class="h4 mrgn-tp-0 mrgn-bttm-md">
                     What was wrong?
