--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ script: FeedbackToolScript.js
             }
         }
     });
-</script> -->
+</script> --><!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
     <div class="col-sm-7 col-lg-6">
         <section class="gc-pg-hlpfl provisional">
@@ -42,8 +42,8 @@ script: FeedbackToolScript.js
                                 </div>
                             </div>
                         </div>
-                        <p class="h3 hidden">If not, tell us why:</p>
-                        <div class="gc-pg-hlpfl-deactivated">
+                        <p class="h3 hidden nojs-show">If not, tell us why:</p>
+                        <div class="gc-pg-hlpfl-no nojs-show">
                             <fieldset>
                                 <legend class="h4 mrgn-tp-0 mrgn-bttm-md">
                                     What was wrong?
@@ -93,7 +93,7 @@ script: FeedbackToolScript.js
                         </div>
                     </form>
                 </div>
-            <div class="gc-pg-hlpfl-thnk hide">
+                <div class="gc-pg-hlpfl-thnk hide">
                     <p class="h6 mrgn-tp-sm mrgn-bttm-sm">
                         <span class="far fa-check-circle text-success mrgn-rght-sm" aria-hidden="true"></span> Thank you for your feedback
                     </p>
@@ -105,4 +105,4 @@ script: FeedbackToolScript.js
         <div class="wb-share" data-wb-share='{"pnlId":"pnlShrPg", "lnkClass": "btn btn-default btn-block mrgn-tp-md"}'></div>
     </div>
 </div>
-
+<!-- END PAGE FEEDBACK WIDGET -->
