Added wb-frmvld2.js Javascript file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 title: Feedback Form 
-script: FeedbackToolScript.js
+script:
+  - wb-frmvld2.js
+  - FeedbackToolScript.js
 ---
 <!-- <script>
     $('#gc-pg-hlpfl-frm').validate({
