--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ script:
     <div class="col-sm-7 col-lg-6">
         <section class="gc-pg-hlpfl provisional">
             <div class="well mrgn-bttm-0">
-                <div class="wb-frmvld">
+                <div class="wb-frmvld2">
                     <form id="gc-pg-hlpfl-frm" action="#" method="post" autocomplete="off">
                         <input type="hidden" name="institutionopt" value="Institution acronym - required - must use same value EN and FR" />
                         <input type="hidden" name="themeopt" value="Theme - required - must use same value EN and FR" />
