--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ script:
         <section class="gc-pg-hlpfl provisional">
             <div class="well mrgn-bttm-0">
                 <div class="wb-frmvld2">
+                   <form id="gc-pg-hlpfl-frm" action="/gc/services/generateemail" method="post" autocomplete="off" 
+                    class="provisional wb-postback" data-wb-postback="{&quot;success&quot;:&quot;.gc-pg-hlpfl-thnk&quot;
+                        ,&quot;content&quot;:&quot;#gc-pg-hlpfl-frm&quot;}">
+                    <form id="gc-pg-hlpfl-frm" action="#" method="post" autocomplete="off" data-wb-postback="{&quot;success&quot;:&quot;.gc-pg-hlpfl-thnk&quot;
+                        ,&quot;content&quot;:&quot;#gc-pg-hlpfl-frm&quot;}">
                     <form id="gc-pg-hlpfl-frm" action="#" method="post" autocomplete="off">
                         <input type="hidden" name="institutionopt" value="Institution acronym - required - must use same value EN and FR" />
                         <input type="hidden" name="themeopt" value="Theme - required - must use same value EN and FR" />
