--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@ script:
   - wb-frmvld2.js
   - FeedbackToolScript.js
 ---
-<!-- <script>
-    $('#gc-pg-hlpfl-frm').validate({
-        rules: {
-            details: {
-                sinCA: true,
-                required: true
-            }
-        }
-    });
-</script> --><!-- START PAGE FEEDBACK WIDGET -->
+<!-- START PAGE FEEDBACK WIDGET -->
 <div class="row row-no-gutters mrgn-tp-xl">
     <div class="col-sm-7 col-lg-6">
         <section class="gc-pg-hlpfl provisional">
