--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Stuff I could maybe improve:
 						</fieldset>
 						<div class="form-group">
 							<label for="problem6" class="mrgn-tp-sm mrgn-bttm-0"><span class="field-name">Please provide more details </span></label>
-							<p id="problem6-note"><small><strong>You will not receive a reply. Telephone numbers and email addresses will be removed.</strong><br>(maximum 300 characters)</small></p>
+							<p id="problem6-note"><small><strong>You will not receive a reply. Telephone numbers and email addresses will be removed.</strong><br>Maximum 300 characters</small></p>
 							<textarea id="problem6" aria-describedby="problem6-note" name="details" class="form-control full-width" maxlength="300"></textarea>
 						</div>
 						<button type="submit" name="helpful" value="No" class="btn btn-primary" -submit>Submit</button>
