--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ Stuff I could maybe improve:
 				<input type="hidden" name="institutionopt" value="Institution - required - must use same abbreviation value EN and FR">
 				<input type="hidden" name="themeopt" value="Theme - required - must use same value EN and FR">
 				<input type="hidden" name="sectionopt" value="Section - required but can be blank - same value EN and FR">
+				<input type="hidden" name="language" value="Language - required - use EN or FR">
 				<input type="hidden" name="pageTitle" value="Page title (EN) - required">
 				<input type="hidden" name="submissionPage" value="Page url - required">
 				<fieldset class="gc-pg-hlpfl-btn chkbxrdio-grp row row-no-gutters d-flex align-items-center">
