--- a/index.html
+++ b/index.html
@@ -30,3 +30,5 @@ Stuff I could maybe improve:
 -Should there be type 1 and type 2 variants (for yes/no + details vs yes/no-only)
 -Add spacing between legend and buttons in smaller views?
 -->
+
+<!--ISSUE: I don't hear a form beep in NVDA when I tab into this due to the parent figure, also don't hear anything along the lines of "out of figure/form" when I tab out of the figure. Maybe try updaing NVDA to see if it works better nowadays.-->
