--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
---- "altLangPage": "gc-page-success-new-fr.html" "altLangPrefix": "gc-page-success_this-var-is-broken-in-modern-gcweb" "breadcrumb": "this-var-is-broken-in-modern-gcweb" "breadcrumbs": - "title": "GCWeb home" "link": "https://wet-boew.github.io/GCWeb/index-en.html"
-- "title": "Provisional functionality" "link": "https://wet-boew.github.io/themes-dist/GCWeb/provisional-en.html" "css": "https://use.fontawesome.com/releases/v5.8.1/css/all.css" "dateModified": "2021-12-06" "description": "Feedback widget for Canada.ca"
-"language": "en" "title": "Page success widget (NEW) - Working example" "noReportProblem": "true" ---
+---
+"altLangPage": "gc-page-success-new-fr.html"
+"altLangPrefix": "gc-page-success_this-var-is-broken-in-modern-gcweb"
+"breadcrumb": "this-var-is-broken-in-modern-gcweb" 
+"breadcrumbs":
+  - "title": "GCWeb home"
+    "link": "https://wet-boew.github.io/GCWeb/index-en.html"
+  - "title": "Provisional functionality"
+    "link": "https://wet-boew.github.io/themes-dist/GCWeb/provisional-en.html"
+"css": "https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+"dateModified": "2021-12-06"
+"description": "Feedback widget for Canada.ca"
+"language": "en"
+"title": "Page success widget (NEW) - Working example"
+"noReportProblem": "true"
+---
 
 
 <div class="wb-prettify all-pre hide"></div>
 
 <style>
-    @media screen and (max-width: 767px) {
-        .wb-enable .text-center-xs-js {
-            text-align: center;
-        }
-    }
-    
-    @media screen and (min-width: 768px) {
-        .d-flex {
-            display: flex;
-        }
-        .align-items-center {
-            align-items: center;
-        }
-    }
+	@media screen and (max-width: 767px) {
+		.wb-enable .text-center-xs-js {
+			text-align: center;
+		}
+	}
+
+	@media screen and (min-width: 768px) {
+		.d-flex {
+			display: flex;
+		}
+
+		.align-items-center {
+			align-items: center;
+		}
+	}
 </style>
 
 <!--<p>Planned to eventually replace Report a problem. Uses multiple features: <code>wb-postback</code> and <code>data-wb-doaction</code> plugins, as well as <code>nojs-*</code> styles and Font Awesome.</p>-->
