--- a/index.html
+++ b/index.html
@@ -43,7 +43,23 @@ Stuff I could maybe improve:
 -Should there be type 1 and type 2 variants (for yes/no + details vs yes/no-only)
 -Add spacing between legend and buttons in smaller views?
 -->
-<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-4">
+
+<div>
+    <form role="form">
+        <div class="form-group">
+            <label for="firstInput">Email</label>
+            <input type="text" size="10" id="firstInput" name="firstInput" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label for="label-2-1">Label 2</label>
+              <input type="password" size="10" id="label-2-1" name="label-2-1" class="form-control" />
+           </div>
+
+    </form>
+</div>
+
+
+<!-- <div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-4">
     <form action="" method="post" novalidate="novalidate">
         <input id="emailTemplateESDC" name="emailTemplate" type="hidden" value="esdc-edsc/national-seniors-council-contact-en">
         <div class="form-group">
@@ -68,4 +84,4 @@ Stuff I could maybe improve:
         </div>
         <button type="submit" class="btn btn-primary">Submit</button> <button type="reset" class="btn btn-default">Reset</button>
     </form>
-<div aria-relevant="all" aria-live="polite" class="arialive wb-inv"></div></div>
+<div aria-relevant="all" aria-live="polite" class="arialive wb-inv"></div></div> -->
