--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Stuff I could maybe improve:
             <textarea id="feedbackArea" name="details" class="full-width" maxlength="300"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-default">Submit</button>
-        <button type="submit" class="btn btn-default">Reset</button>
+        <button type="reset" class="btn btn-default">Reset</button>
     </form>
 </div>
 
