--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Stuff I could maybe improve:
                 <input type="password" size="10" id="secondInput" name="secondInput" class="form-control" />
             </div>
             <label for="feedbackArea">Please provide more details</label>
-            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300"></textarea>
+            <textarea id="feedbackArea" name="details" rows="3" cols="50" maxlength="300"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-default">Submit</button>
         <button type="reset" class="btn btn-default">Reset</button>
