--- a/index.html
+++ b/index.html
@@ -45,25 +45,23 @@ Stuff I could maybe improve:
 -->
 
 <div class="wb-frmvld">
-    <form action="#" method="get" id="validation-example" name="validation-example">
+    <form action="#" method="get" id="validation-example">
         <fieldset>
             <div class="form-group">
                 <label for="firstInput" class="required"><span class="field-name">Name</span> <strong class="required">(required)</strong></label>
-                <input type="text" size="10" id="firstInput" name="firstInput" class="form-control" />
+                <input type="text" size="10" id="firstInput" name="firstInput" class="form-control" autocomplete="given-name" required="required" data-rule-minlength="2" />
             </div>
             <div class="form-group">
                 <label for="secondInput" class="required">Email<strong class="required">(required)</strong></label>
-                <input type="password" size="10" id="secondInput" name="secondInput" class="form-control" />
+                <input type="password" size="10" id="secondInput" name="secondInput" class="form-control"  autocomplete="email" required="required" data-rule-minlength="2" />
             </div>
             <label for="feedbackArea">Please provide more details</label>
-            <textarea id="feedbackArea" name="details" class="max-width" maxlength="300"></textarea>
+            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300"></textarea>
         </fieldset>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-default">Reset</button>
     </form>
 </div>
-
-
 
 
 <!-- <div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-4">
