--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ Stuff I could maybe improve:
                 <input type="text" size="10" id="firstInput" name="firstInput" class="form-control" autocomplete="given-name" required="required" data-rule-minlength="2" />
             </div>
             <div class="form-group">
-                <label for="secondInput" class="required">Email<strong class="required">(required)</strong></label>
+                <label for="secondInput" class="required"><span class="field-name">Email</span><strong class="required">(required)</strong></label>
                 <input type="password" size="10" id="secondInput" name="secondInput" class="form-control"  autocomplete="email" required="required" data-rule-minlength="2" />
             </div>
             <label for="feedbackArea">Please provide more details</label>
-            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300"></textarea>
+            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300" class="required"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-default">Reset</button>
