--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Stuff I could maybe improve:
                 <label for="secondInput" class="required"><span class="field-name">Email</span><strong class="required">(required)</strong></label>
                 <input type="password" size="10" id="secondInput" name="secondInput" class="form-control"  autocomplete="email" required="required" data-rule-minlength="2" />
             </div>
-            <label for="feedbackArea">Please provide more details</label>
+            <label for="feedbackArea" class="required"><span class="field-name">Please provide feedback</span><strong class="required">(required)</strong></label>
             <textarea id="feedbackArea" name="details" class="full-width" maxlength="300" class="required"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
