--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Stuff I could maybe improve:
                 <input type="password" size="10" id="secondInput" name="secondInput" class="form-control"  autocomplete="email" required="required" data-rule-minlength="2" />
             </div>
             <label for="feedbackArea" class="required"><span class="field-name">Please provide feedback</span><strong class="required">(required)</strong></label>
-            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300" class="required"></textarea>
+            <textarea id="feedbackArea" name="details" class="full-width" maxlength="300" required="required"></textarea>
         </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="reset" class="btn btn-default">Reset</button>
