--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Stuff I could maybe improve:
 				<input type="hidden" name="language" value="Language - required - use EN or FR">
 				<input type="hidden" name="pageTitle" value="Page title (EN) - required">
 				<input type="hidden" name="submissionPage" value="Page url - required">
+				<input type="hidden" name="deviceType" value="">
 				<fieldset class="gc-pg-hlpfl-btn chkbxrdio-grp row row-no-gutters d-flex align-items-center">
 					<legend class="col-xs-12 col-sm-7 col-md-8 text-center-xs-js mrgn-tp-sm"><span class="field-name">Did you find what you were looking for?</span></legend>
 					<div class="col-xs-2 col-sm-5 col-md-4 text-right nojs-show">
