--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 "language": "en"
 "title": "Page success widget (NEW) - Working example"
 "noReportProblem": "true"
+script:
+  - wb-frmvld2.js
+  - FeedbackToolScript.js
 ---
 
 
